--- a/vite-front.conf
+++ b/vite-front.conf
@@ -2,7 +2,7 @@ server {
     listen       3000;
     server_name  101.132.124.188;
     location / {
-        root   /www/server/nginx/html;
+        root   /usr/share/nginx/html/;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
