--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,15 @@ install-job:
   only:
     refs:
       - master
+  tags:
+    - build,deploy
   stage: install
   script: 
     - npm install
   
 build-job:
+  tags:
+    - build,deploy
   stage: build
   script:
     - npm run build
@@ -29,6 +33,8 @@ deploy-job:
   only:
     refs:
       - master
+  tags:
+    - build,deploy
   stage: deploy
   script:
     - rm -rf ${DIST_DIR}/*
